fix(nav-bar): adding the height at navbar svg to well displayed on IE 9 #29

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -2,6 +2,7 @@
 
 .navbar-nav-svg {
   width: 1.4rem;
+  height: 1.4rem;
 }
 
 .ng-banner {
